--- a/includes/back-header.html
+++ b/includes/back-header.html
@@ -1,5 +1,3 @@
-<header class="site-header back-header">
-  <a id="back-link" href="/">
-    <span class="back-button">&#x25c0;</span> <div class="logo"></div>
-  </a>
-</header>
+<div id="table-of-contents">
+  <h3>Table of Contents</h3>
+</div>
