--- a/includes/site-header.html
+++ b/includes/site-header.html
@@ -5,7 +5,7 @@
     <ul>
       <li class="site-link community-link">
         <a href="/">
-          <div class="nav-icon community-icon"></div>
+          <div class="nav-icon newsletter-icon"></div>
           Community
         </a>
       </li>
@@ -15,10 +15,10 @@
           Courses
         </a>
       </li>
-      <li class="site-link newsletter-link">
-        <a href="/newsletter.html">
-          <div class="nav-icon newsletter-icon"></div>
-          Newsletter
+      <li class="site-link about-link">
+        <a href="/about.html">
+          <div class="nav-icon community-icon"></div>
+          About
         </a>
       </li>
     </ul>
