renamed courses to tutorials to be more accessible

--- a/includes/site-header.html
+++ b/includes/site-header.html
@@ -9,10 +9,10 @@
           Community
         </a>
       </li>
-      <li class="site-link courses-link">
-        <a href="/courses">
-          <div class="nav-icon courses-icon"></div>
-          Courses
+      <li class="site-link tutorials-link">
+        <a href="/tutorials">
+          <div class="nav-icon tutorials-icon"></div>
+          Tutorials
         </a>
       </li>
       <li class="site-link about-link">
