--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ svg {
   }
 }
 
-.current-page-courses .courses-link {
+.current-page-tutorials .tutorials-link {
   background: darkorchid;
   border-radius: 100px;
   a {
