live visitor count

--- a/includes/site-header.html
+++ b/includes/site-header.html
@@ -23,4 +23,5 @@
       </li>
     </ul>
   </nav>
+  <div class="live-visitors"><span class="pulse-circle"></span> <span id="visitor-count"></span></div>
 </header>
