--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,7 @@ svg {
 }
 
 .page {
-  padding: 20px;
+  padding: 20px 20px 80px;
 }
 
 h1 {
@@ -253,7 +253,36 @@ input[type="email"] {
   padding-left: 16px;
 }
 
+.pulse-circle {
+  width: 10px;
+  height: 10px;
+  background-color: LightGreen;
+  border-radius: 100%;
+  margin-right: 10px;
+  position: relative;
+  animation: pulse 1.75s infinite ease-in-out;
+  display: block;
+}
 
+/* Animation keyframes */
+@keyframes pulse {
+  0% {
+      box-shadow: 0 0 0 0 rgba(233, 249, 205, 0.7);
+  }
+  70% {
+      box-shadow: 0 0 0 10px rgba(233, 249, 205, 0);
+  }
+  100% {
+      box-shadow: 0 0 0 0 rgba(233, 249, 205, 0);
+  }
+}
+
+/* Media query to respect user's preference for reduced motion */
+@media (prefers-reduced-motion: reduce) {
+  .pulse-circle {
+      animation: none;
+  }
+}
 
 #table-of-contents {
   margin-top: 16px;
@@ -268,6 +297,16 @@ input[type="email"] {
     color: black;
     line-height: 1.5;
   }
+}
+
+.live-visitors {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: inline-flex;
+  gap: 2px;
+  align-items: center;
+  font-size: 15px;
 }
 
 @media (max-width: 768px) {
@@ -313,6 +352,13 @@ input[type="email"] {
     flex-direction: column;
     align-items: start;
   }
+
+  .live-visitors {
+    background: white;
+    padding: 8px 16px;
+    border-radius: 16px;
+    box-shadow: 0 6px 6px -1px rgba(0, 0, 0, 0.08);
+  }
 }
 
 @media (min-width: 768px) {
@@ -330,13 +376,13 @@ input[type="email"] {
   
   .site-header {
     width: 33%;
+    position: relative;
   }
   
   .site-main {
     width: 67%;
   }
 }
-
 
 @media (prefers-color-scheme: dark) {
   body::after {
@@ -372,5 +418,23 @@ input[type="email"] {
 
   #table-of-contents a {
     color: white;
+  }
+}
+
+@media (prefers-color-scheme: dark) and (max-width: 768px) {
+  .live-visitors {
+    background: rgba(0, 0, 0, 0.35);
+    box-shadow: 0 6px 6px -1px rgba(0, 0, 0, 0.08);
+    padding: 8px 16px;
+    border-radius: 16px;
+  }
+}
+
+@media (prefers-color-scheme: light) and (max-width: 768px) {
+  .live-visitors {
+    background: white;
+    box-shadow: 0 6px 6px -1px rgba(0, 0, 0, 0.08);
+    padding: 8px 16px;
+    border-radius: 16px;
   }
 }
