--- a/styles.css
+++ b/styles.css
@@ -307,6 +307,7 @@ input[type="email"] {
   gap: 2px;
   align-items: center;
   font-size: 15px;
+  z-index: 999;
 }
 
 @media (max-width: 768px) {
